Have put the width as a percentage, this time in css file to solve pdf formatting on mobile

--- a/assets/css/resume/corps.css
+++ b/assets/css/resume/corps.css
@@ -3,3 +3,7 @@
   margin-bottom: 30px;
   background-color: rgb(16, 16, 20) ;
 }
+
+embed {
+  width: 100%;
+}
